pp2/y.output
Rules never reduced

  107 OptionalExpr: /* empty */


State 53 conflicts: 23 shift/reduce, 1 reduce/reduce
State 70 conflicts: 1 reduce/reduce
State 88 conflicts: 1 reduce/reduce
State 89 conflicts: 1 reduce/reduce
State 123 conflicts: 1 reduce/reduce
State 141 conflicts: 1 reduce/reduce
State 198 conflicts: 1 reduce/reduce
State 200 conflicts: 1 reduce/reduce
State 216 conflicts: 1 reduce/reduce
State 217 conflicts: 1 reduce/reduce
State 229 conflicts: 1 reduce/reduce
State 230 conflicts: 1 reduce/reduce
State 231 conflicts: 1 reduce/reduce
State 234 conflicts: 1 reduce/reduce
State 235 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Type T_Identifier ';'

    9 Type: T_Int
   10     | T_Double
   11     | T_Bool
   12     | T_String
   13     | T_Identifier
   14     | Type T_Dims

   15 NamedType: T_Identifier

   16 FnDecl: Type T_Identifier '(' Variables ')' StmtBlock
   17       | T_Void T_Identifier '(' Variables ')' StmtBlock

   18 Variables: Variables ',' Type T_Identifier
   19          | Type T_Identifier
   20          | /* empty */

   21 ClassDecl: T_Class T_Identifier Extend Impl '{' Fields '}'
   22          | T_Class T_Identifier Extend Impl '{' '}'

   23 Extend: T_Extends T_Identifier
   24       | /* empty */

   25 Impl: T_Implements Implements
   26     | /* empty */

   27 Implements: Implements ',' NamedType
   28           | NamedType

   29 Fields: Fields Field
   30       | Field

   31 Field: VarDecl
   32      | FnDecl

   33 InterfaceDecl: T_Interface T_Identifier '{' Prototypes '}'
   34              | T_Interface T_Identifier '{' '}'

   35 Prototypes: Prototypes Prototype
   36           | Prototype

   37 Prototype: Type T_Identifier '(' Variables ')' ';'
   38          | T_Void T_Identifier '(' Variables ')' ';'

   39 StmtBlock: '{' VarDecls Stmts '}'
   40          | '{' VarDecls '}'
   41          | '{' Stmts '}'
   42          | '{' '}'

   43 VarDecls: VarDecls VarDecl
   44         | /* empty */

   45 Stmts: Stmts Stmt
   46      | Stmt

   47 Stmt: OptionalExpr ';'
   48     | IfStmt
   49     | WhileStmt
   50     | ForStmt
   51     | BreakStmt
   52     | ReturnStmt
   53     | SwitchStmt
   54     | PrintStmt
   55     | StmtBlock

   56 IfStmt: T_If '(' Expr ')' Stmt
   57       | T_If '(' Expr ')' Stmt T_Else Stmt

   58 WhileStmt: T_While '(' Expr ')' Stmt

   59 ForStmt: T_For '(' OptionalExpr ';' Expr ';' OptionalExpr ')' Stmt

   60 ReturnStmt: T_Return OptionalExpr ';'

   61 BreakStmt: T_Break ';'

   62 SwitchStmt: T_Switch '(' Expr ')' '{' Cases Default '}'

   63 Cases: Cases Case
   64      | Case

   65 Case: T_Case IntConstant ':' Stmts
   66     | T_Case IntConstant ':'

   67 Default: T_Default ':' Stmts
   68        | /* empty */

   69 PrintStmt: T_Print '(' Exprs ')' ';'

   70 Expr: AssignExpr
   71     | Constant
   72     | LValue
   73     | T_This
   74     | Call
   75     | '(' Expr ')'
   76     | ArithmeticExpr
   77     | EqualityExpr
   78     | RelationalExpr
   79     | LogicalExpr
   80     | PostfixExpr
   81     | T_ReadInteger '(' ')'
   82     | T_ReadLine '(' ')'
   83     | T_New T_Identifier
   84     | T_NewArray '(' Expr ',' Type ')'

   85 AssignExpr: LValue '=' Expr

   86 ArithmeticExpr: Expr '+' Expr
   87               | Expr '-' Expr
   88               | Expr '*' Expr
   89               | Expr '/' Expr
   90               | Expr '%' Expr
   91               | '-' Expr

   92 PostfixExpr: LValue T_Increment
   93            | LValue T_Decrement

   94 EqualityExpr: Expr T_Equal Expr
   95             | Expr T_NotEqual Expr

   96 RelationalExpr: Expr '<' Expr
   97               | Expr '>' Expr
   98               | Expr T_LessEqual Expr
   99               | Expr T_GreaterEqual Expr

  100 LogicalExpr: Expr T_And Expr
  101            | Expr T_Or Expr
  102            | '!' Expr

  103 Exprs: Exprs ',' Expr
  104      | Expr

  105 OptionalExpr: /* empty */
  106             | Expr
  107             | /* empty */

  108 LValue: FieldAccess
  109       | ArrayAccess

  110 FieldAccess: T_Identifier
  111            | Expr '.' T_Identifier

  112 Call: T_Identifier '(' Actuals ')'
  113     | Expr '.' T_Identifier '(' Actuals ')'

  114 ArrayAccess: Expr '[' Expr ']'

  115 Actuals: Exprs
  116        | /* empty */

  117 Constant: IntConstant
  118         | DoubleConstant
  119         | BoolConstant
  120         | StringConstant
  121         | NullConstant

  122 IntConstant: T_IntConstant

  123 DoubleConstant: T_DoubleConstant

  124 BoolConstant: T_BoolConstant

  125 StringConstant: T_StringConstant

  126 NullConstant: T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 102
'%' (37) 90
'(' (40) 16 17 37 38 56 57 58 59 62 69 75 81 82 84 112 113
')' (41) 16 17 37 38 56 57 58 59 62 69 75 81 82 84 112 113
'*' (42) 88
'+' (43) 86
',' (44) 18 27 84 103
'-' (45) 87 91
'.' (46) 111 113
'/' (47) 89
':' (58) 65 66 67
';' (59) 8 37 38 47 59 60 61 69
'<' (60) 96
'=' (61) 85
'>' (62) 97
'[' (91) 114
']' (93) 114
'{' (123) 21 22 33 34 39 40 41 42 62
'}' (125) 21 22 33 34 39 40 41 42 62
error (256)
T_Void (258) 17 38
T_Bool (259) 11
T_Int (260) 9
T_Double (261) 10
T_String (262) 12
T_Class (263) 21 22
T_LessEqual (264) 98
T_GreaterEqual (265) 99
T_Equal (266) 94
T_NotEqual (267) 95
T_Dims (268) 14
T_Increment (269) 92
T_Decrement (270) 93
T_And (271) 100
T_Or (272) 101
T_Null (273) 126
T_Extends (274) 23
T_This (275) 73
T_Interface (276) 33 34
T_Implements (277) 25
T_While (278) 58
T_For (279) 59
T_If (280) 56 57
T_Else (281) 57
T_Return (282) 60
T_Break (283) 61
T_Switch (284) 62
T_Case (285) 65 66
T_Default (286) 67
T_New (287) 83
T_NewArray (288) 84
T_Print (289) 69
T_ReadInteger (290) 81
T_ReadLine (291) 82
T_Identifier (292) 8 13 15 16 17 18 19 21 22 23 33 34 37 38 83 110
    111 112 113
T_StringConstant (293) 125
T_IntConstant (294) 122
T_DoubleConstant (295) 123
T_BoolConstant (296) 124
LOWER_THAN_ELSE (297)
UMINUS (298)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
Program (64)
    on left: 1, on right: 0
DeclList (65)
    on left: 2 3, on right: 1 2
Decl (66)
    on left: 4 5 6 7, on right: 2 3
VarDecl (67)
    on left: 8, on right: 4 31 43
Type (68)
    on left: 9 10 11 12 13 14, on right: 8 14 16 18 19 37 84
NamedType (69)
    on left: 15, on right: 27 28
FnDecl (70)
    on left: 16 17, on right: 5 32
Variables (71)
    on left: 18 19 20, on right: 16 17 18 37 38
ClassDecl (72)
    on left: 21 22, on right: 6
Extend (73)
    on left: 23 24, on right: 21 22
Impl (74)
    on left: 25 26, on right: 21 22
Implements (75)
    on left: 27 28, on right: 25 27
Fields (76)
    on left: 29 30, on right: 21 29
Field (77)
    on left: 31 32, on right: 29 30
InterfaceDecl (78)
    on left: 33 34, on right: 7
Prototypes (79)
    on left: 35 36, on right: 33 35
Prototype (80)
    on left: 37 38, on right: 35 36
StmtBlock (81)
    on left: 39 40 41 42, on right: 16 17 55
VarDecls (82)
    on left: 43 44, on right: 39 40 43
Stmts (83)
    on left: 45 46, on right: 39 41 45 65 67
Stmt (84)
    on left: 47 48 49 50 51 52 53 54 55, on right: 45 46 56 57 58 59
IfStmt (85)
    on left: 56 57, on right: 48
WhileStmt (86)
    on left: 58, on right: 49
ForStmt (87)
    on left: 59, on right: 50
ReturnStmt (88)
    on left: 60, on right: 52
BreakStmt (89)
    on left: 61, on right: 51
SwitchStmt (90)
    on left: 62, on right: 53
Cases (91)
    on left: 63 64, on right: 62 63
Case (92)
    on left: 65 66, on right: 63 64
Default (93)
    on left: 67 68, on right: 62
PrintStmt (94)
    on left: 69, on right: 54
Expr (95)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84,
    on right: 56 57 58 59 62 75 84 85 86 87 88 89 90 91 94 95 96 97
    98 99 100 101 102 103 104 106 111 113 114
AssignExpr (96)
    on left: 85, on right: 70
ArithmeticExpr (97)
    on left: 86 87 88 89 90 91, on right: 76
PostfixExpr (98)
    on left: 92 93, on right: 80
EqualityExpr (99)
    on left: 94 95, on right: 77
RelationalExpr (100)
    on left: 96 97 98 99, on right: 78
LogicalExpr (101)
    on left: 100 101 102, on right: 79
Exprs (102)
    on left: 103 104, on right: 69 103 115
OptionalExpr (103)
    on left: 105 106 107, on right: 47 59 60
LValue (104)
    on left: 108 109, on right: 72 85 92 93
FieldAccess (105)
    on left: 110 111, on right: 108
Call (106)
    on left: 112 113, on right: 74
ArrayAccess (107)
    on left: 114, on right: 109
Actuals (108)
    on left: 115 116, on right: 112 113
Constant (109)
    on left: 117 118 119 120 121, on right: 71
IntConstant (110)
    on left: 122, on right: 65 66 117
DoubleConstant (111)
    on left: 123, on right: 118
BoolConstant (112)
    on left: 124, on right: 119
StringConstant (113)
    on left: 125, on right: 120
NullConstant (114)
    on left: 126, on right: 121


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Type           go to state 13
    FnDecl         go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


state 1

   17 FnDecl: T_Void . T_Identifier '(' Variables ')' StmtBlock

    T_Identifier  shift, and go to state 17


state 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


state 3

    9 Type: T_Int .

    $default  reduce using rule 9 (Type)


state 4

   10 Type: T_Double .

    $default  reduce using rule 10 (Type)


state 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


state 6

   21 ClassDecl: T_Class . T_Identifier Extend Impl '{' Fields '}'
   22          | T_Class . T_Identifier Extend Impl '{' '}'

    T_Identifier  shift, and go to state 18


state 7

   33 InterfaceDecl: T_Interface . T_Identifier '{' Prototypes '}'
   34              | T_Interface . T_Identifier '{' '}'

    T_Identifier  shift, and go to state 19


state 8

   13 Type: T_Identifier .

    $default  reduce using rule 13 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 20


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 21
    VarDecl        go to state 12
    Type           go to state 13
    FnDecl         go to state 14
    ClassDecl      go to state 15
    InterfaceDecl  go to state 16


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Type . T_Identifier ';'
   14 Type: Type . T_Dims
   16 FnDecl: Type . T_Identifier '(' Variables ')' StmtBlock

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 23


state 14

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 15

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 16

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 17

   17 FnDecl: T_Void T_Identifier . '(' Variables ')' StmtBlock

    '('  shift, and go to state 24


state 18

   21 ClassDecl: T_Class T_Identifier . Extend Impl '{' Fields '}'
   22          | T_Class T_Identifier . Extend Impl '{' '}'

    T_Extends  shift, and go to state 25

    $default  reduce using rule 24 (Extend)

    Extend  go to state 26


state 19

   33 InterfaceDecl: T_Interface T_Identifier . '{' Prototypes '}'
   34              | T_Interface T_Identifier . '{' '}'

    '{'  shift, and go to state 27


state 20

    0 $accept: Program $end .

    $default  accept


state 21

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 22

   14 Type: Type T_Dims .

    $default  reduce using rule 14 (Type)


state 23

    8 VarDecl: Type T_Identifier . ';'
   16 FnDecl: Type T_Identifier . '(' Variables ')' StmtBlock

    ';'  shift, and go to state 28
    '('  shift, and go to state 29


state 24

   17 FnDecl: T_Void T_Identifier '(' . Variables ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Variables)

    Type       go to state 30
    Variables  go to state 31


state 25

   23 Extend: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 32


state 26

   21 ClassDecl: T_Class T_Identifier Extend . Impl '{' Fields '}'
   22          | T_Class T_Identifier Extend . Impl '{' '}'

    T_Implements  shift, and go to state 33

    $default  reduce using rule 26 (Impl)

    Impl  go to state 34


state 27

   33 InterfaceDecl: T_Interface T_Identifier '{' . Prototypes '}'
   34              | T_Interface T_Identifier '{' . '}'

    T_Void        shift, and go to state 35
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 36

    Type        go to state 37
    Prototypes  go to state 38
    Prototype   go to state 39


state 28

    8 VarDecl: Type T_Identifier ';' .

    $default  reduce using rule 8 (VarDecl)


state 29

   16 FnDecl: Type T_Identifier '(' . Variables ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Variables)

    Type       go to state 30
    Variables  go to state 40


state 30

   14 Type: Type . T_Dims
   19 Variables: Type . T_Identifier

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 41


state 31

   17 FnDecl: T_Void T_Identifier '(' Variables . ')' StmtBlock
   18 Variables: Variables . ',' Type T_Identifier

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


state 32

   23 Extend: T_Extends T_Identifier .

    $default  reduce using rule 23 (Extend)


state 33

   25 Impl: T_Implements . Implements

    T_Identifier  shift, and go to state 44

    NamedType   go to state 45
    Implements  go to state 46


state 34

   21 ClassDecl: T_Class T_Identifier Extend Impl . '{' Fields '}'
   22          | T_Class T_Identifier Extend Impl . '{' '}'

    '{'  shift, and go to state 47


state 35

   38 Prototype: T_Void . T_Identifier '(' Variables ')' ';'

    T_Identifier  shift, and go to state 48


state 36

   34 InterfaceDecl: T_Interface T_Identifier '{' '}' .

    $default  reduce using rule 34 (InterfaceDecl)


state 37

   14 Type: Type . T_Dims
   37 Prototype: Type . T_Identifier '(' Variables ')' ';'

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 49


state 38

   33 InterfaceDecl: T_Interface T_Identifier '{' Prototypes . '}'
   35 Prototypes: Prototypes . Prototype

    T_Void        shift, and go to state 35
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 50

    Type       go to state 37
    Prototype  go to state 51


state 39

   36 Prototypes: Prototype .

    $default  reduce using rule 36 (Prototypes)


state 40

   16 FnDecl: Type T_Identifier '(' Variables . ')' StmtBlock
   18 Variables: Variables . ',' Type T_Identifier

    ')'  shift, and go to state 52
    ','  shift, and go to state 43


state 41

   19 Variables: Type T_Identifier .

    $default  reduce using rule 19 (Variables)


state 42

   17 FnDecl: T_Void T_Identifier '(' Variables ')' . StmtBlock

    '{'  shift, and go to state 53

    StmtBlock  go to state 54


state 43

   18 Variables: Variables ',' . Type T_Identifier

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Type  go to state 55


state 44

   15 NamedType: T_Identifier .

    $default  reduce using rule 15 (NamedType)


state 45

   28 Implements: NamedType .

    $default  reduce using rule 28 (Implements)


state 46

   25 Impl: T_Implements Implements .
   27 Implements: Implements . ',' NamedType

    ','  shift, and go to state 56

    $default  reduce using rule 25 (Impl)


state 47

   21 ClassDecl: T_Class T_Identifier Extend Impl '{' . Fields '}'
   22          | T_Class T_Identifier Extend Impl '{' . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 57

    VarDecl  go to state 58
    Type     go to state 13
    FnDecl   go to state 59
    Fields   go to state 60
    Field    go to state 61


state 48

   38 Prototype: T_Void T_Identifier . '(' Variables ')' ';'

    '('  shift, and go to state 62


state 49

   37 Prototype: Type T_Identifier . '(' Variables ')' ';'

    '('  shift, and go to state 63


state 50

   33 InterfaceDecl: T_Interface T_Identifier '{' Prototypes '}' .

    $default  reduce using rule 33 (InterfaceDecl)


state 51

   35 Prototypes: Prototypes Prototype .

    $default  reduce using rule 35 (Prototypes)


state 52

   16 FnDecl: Type T_Identifier '(' Variables ')' . StmtBlock

    '{'  shift, and go to state 53

    StmtBlock  go to state 64


state 53

   39 StmtBlock: '{' . VarDecls Stmts '}'
   40          | '{' . VarDecls '}'
   41          | '{' . Stmts '}'
   42          | '{' . '}'

    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_While           shift, and go to state 67
    T_For             shift, and go to state 68
    T_If              shift, and go to state 69
    T_Return          shift, and go to state 70
    T_Break           shift, and go to state 71
    T_Switch          shift, and go to state 72
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_Print           shift, and go to state 75
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 78
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85
    '{'               shift, and go to state 53
    '}'               shift, and go to state 86

    T_Null            [reduce using rule 44 (VarDecls)]
    T_This            [reduce using rule 44 (VarDecls)]
    T_While           [reduce using rule 44 (VarDecls)]
    T_For             [reduce using rule 44 (VarDecls)]
    T_If              [reduce using rule 44 (VarDecls)]
    T_Return          [reduce using rule 44 (VarDecls)]
    T_Break           [reduce using rule 44 (VarDecls)]
    T_Switch          [reduce using rule 44 (VarDecls)]
    T_New             [reduce using rule 44 (VarDecls)]
    T_NewArray        [reduce using rule 44 (VarDecls)]
    T_Print           [reduce using rule 44 (VarDecls)]
    T_ReadInteger     [reduce using rule 44 (VarDecls)]
    T_ReadLine        [reduce using rule 44 (VarDecls)]
    T_Identifier      [reduce using rule 44 (VarDecls)]
    T_StringConstant  [reduce using rule 44 (VarDecls)]
    T_IntConstant     [reduce using rule 44 (VarDecls)]
    T_DoubleConstant  [reduce using rule 44 (VarDecls)]
    T_BoolConstant    [reduce using rule 44 (VarDecls)]
    '-'               [reduce using rule 44 (VarDecls)]
    '!'               [reduce using rule 44 (VarDecls)]
    ';'               reduce using rule 44 (VarDecls)
    ';'               [reduce using rule 105 (OptionalExpr)]
    ';'               [reduce using rule 107 (OptionalExpr)]
    '('               [reduce using rule 44 (VarDecls)]
    '{'               [reduce using rule 44 (VarDecls)]
    '}'               [reduce using rule 44 (VarDecls)]
    $default          reduce using rule 44 (VarDecls)

    StmtBlock       go to state 87
    VarDecls        go to state 88
    Stmts           go to state 89
    Stmt            go to state 90
    IfStmt          go to state 91
    WhileStmt       go to state 92
    ForStmt         go to state 93
    ReturnStmt      go to state 94
    BreakStmt       go to state 95
    SwitchStmt      go to state 96
    PrintStmt       go to state 97
    Expr            go to state 98
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    PostfixExpr     go to state 101
    EqualityExpr    go to state 102
    RelationalExpr  go to state 103
    LogicalExpr     go to state 104
    OptionalExpr    go to state 105
    LValue          go to state 106
    FieldAccess     go to state 107
    Call            go to state 108
    ArrayAccess     go to state 109
    Constant        go to state 110
    IntConstant     go to state 111
    DoubleConstant  go to state 112
    BoolConstant    go to state 113
    StringConstant  go to state 114
    NullConstant    go to state 115


state 54

   17 FnDecl: T_Void T_Identifier '(' Variables ')' StmtBlock .

    $default  reduce using rule 17 (FnDecl)


state 55

   14 Type: Type . T_Dims
   18 Variables: Variables ',' Type . T_Identifier

    T_Dims        shift, and go to state 22
    T_Identifier  shift, and go to state 116


state 56

   27 Implements: Implements ',' . NamedType

    T_Identifier  shift, and go to state 44

    NamedType  go to state 117


state 57

   22 ClassDecl: T_Class T_Identifier Extend Impl '{' '}' .

    $default  reduce using rule 22 (ClassDecl)


state 58

   31 Field: VarDecl .

    $default  reduce using rule 31 (Field)


state 59

   32 Field: FnDecl .

    $default  reduce using rule 32 (Field)


state 60

   21 ClassDecl: T_Class T_Identifier Extend Impl '{' Fields . '}'
   29 Fields: Fields . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 118

    VarDecl  go to state 58
    Type     go to state 13
    FnDecl   go to state 59
    Field    go to state 119


state 61

   30 Fields: Field .

    $default  reduce using rule 30 (Fields)


state 62

   38 Prototype: T_Void T_Identifier '(' . Variables ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Variables)

    Type       go to state 30
    Variables  go to state 120


state 63

   37 Prototype: Type T_Identifier '(' . Variables ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Variables)

    Type       go to state 30
    Variables  go to state 121


state 64

   16 FnDecl: Type T_Identifier '(' Variables ')' StmtBlock .

    $default  reduce using rule 16 (FnDecl)


state 65

  126 NullConstant: T_Null .

    $default  reduce using rule 126 (NullConstant)


state 66

   73 Expr: T_This .

    $default  reduce using rule 73 (Expr)


state 67

   58 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 122


state 68

   59 ForStmt: T_For . '(' OptionalExpr ';' Expr ';' OptionalExpr ')' Stmt

    '('  shift, and go to state 123


state 69

   56 IfStmt: T_If . '(' Expr ')' Stmt
   57       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 124


state 70

   60 ReturnStmt: T_Return . OptionalExpr ';'

    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 78
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85

    ';'       reduce using rule 105 (OptionalExpr)
    ';'       [reduce using rule 107 (OptionalExpr)]
    $default  reduce using rule 105 (OptionalExpr)

    Expr            go to state 98
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    PostfixExpr     go to state 101
    EqualityExpr    go to state 102
    RelationalExpr  go to state 103
    LogicalExpr     go to state 104
    OptionalExpr    go to state 125
    LValue          go to state 106
    FieldAccess     go to state 107
    Call            go to state 108
    ArrayAccess     go to state 109
    Constant        go to state 110
    IntConstant     go to state 111
    DoubleConstant  go to state 112
    BoolConstant    go to state 113
    StringConstant  go to state 114
    NullConstant    go to state 115


state 71

   61 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 126


state 72

   62 SwitchStmt: T_Switch . '(' Expr ')' '{' Cases Default '}'

    '('  shift, and go to state 127


state 73

   83 Expr: T_New . T_Identifier

    T_Identifier  shift, and go to state 128


state 74

   84 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 129


state 75

   69 PrintStmt: T_Print . '(' Exprs ')' ';'

    '('  shift, and go to state 130


state 76

   81 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 131


state 77

   82 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 132


state 78

  110 FieldAccess: T_Identifier .
  112 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 133

    $default  reduce using rule 110 (FieldAccess)


state 79

  125 StringConstant: T_StringConstant .

    $default  reduce using rule 125 (StringConstant)


state 80

  122 IntConstant: T_IntConstant .

    $default  reduce using rule 122 (IntConstant)


state 81

  123 DoubleConstant: T_DoubleConstant .

    $default  reduce using rule 123 (DoubleConstant)


state 82

  124 BoolConstant: T_BoolConstant .

    $default  reduce using rule 124 (BoolConstant)


state 83

   91 ArithmeticExpr: '-' . Expr

    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 78
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85

    Expr            go to state 134
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    PostfixExpr     go to state 101
    EqualityExpr    go to state 102
    RelationalExpr  go to state 103
    LogicalExpr     go to state 104
    LValue          go to state 106
    FieldAccess     go to state 107
    Call            go to state 108
    ArrayAccess     go to state 109
    Constant        go to state 110
    IntConstant     go to state 111
    DoubleConstant  go to state 112
    BoolConstant    go to state 113
    StringConstant  go to state 114
    NullConstant    go to state 115


state 84

  102 LogicalExpr: '!' . Expr

    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 78
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85

    Expr            go to state 135
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    PostfixExpr     go to state 101
    EqualityExpr    go to state 102
    RelationalExpr  go to state 103
    LogicalExpr     go to state 104
    LValue          go to state 106
    FieldAccess     go to state 107
    Call            go to state 108
    ArrayAccess     go to state 109
    Constant        go to state 110
    IntConstant     go to state 111
    DoubleConstant  go to state 112
    BoolConstant    go to state 113
    StringConstant  go to state 114
    NullConstant    go to state 115


state 85

   75 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 78
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85

    Expr            go to state 136
    AssignExpr      go to state 99
    ArithmeticExpr  go to state 100
    PostfixExpr     go to state 101
    EqualityExpr    go to state 102
    RelationalExpr  go to state 103
    LogicalExpr     go to state 104
    LValue          go to state 106
    FieldAccess     go to state 107
    Call            go to state 108
    ArrayAccess     go to state 109
    Constant        go to state 110
    IntConstant     go to state 111
    DoubleConstant  go to state 112
    BoolConstant    go to state 113
    StringConstant  go to state 114
    NullConstant    go to state 115


state 86

   42 StmtBlock: '{' '}' .

    $default  reduce using rule 42 (StmtBlock)


state 87

   55 Stmt: StmtBlock .

    $default  reduce using rule 55 (Stmt)


state 88

   39 StmtBlock: '{' VarDecls . Stmts '}'
   40          | '{' VarDecls . '}'
   43 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 65
    T_This            shift, and go to state 66
    T_While           shift, and go to state 67
    T_For             shift, and go to state 68
    T_If              shift, and go to state 69
    T_Return          shift, and go to state 70
    T_Break           shift, and go to state 71
    T_Switch          shift, and go to state 72
    T_New             shift, and go to state 73
    T_NewArray        shift, and go to state 74
    T_Print           shift, and go to state 75
    T_ReadInteger     shift, and go to state 76
    T_ReadLine        shift, and go to state 77
    T_Identifier      shift, and go to state 137
    T_StringConstant  shift, and go to state 79
    T_IntConstant     shift, and go to state 80
    T_DoubleConstant  shift, and go to state 81
    T_BoolConstant    shift, and go to state 82
    '-'               shift, and go to state 83
    '!'               shift, and go to state 84
    '('               shift, and go to state 85
    '{'               shift, and go to state 53
    '}'               shift, and go to state 138

    ';'       reduce using rule 105 (OptionalExpr)
    ';'       [reduce using rule 107 (OptionalExpr)]
    $default  reduce using rule 105 (OptionalExpr)
